<resources>
    <string name="app_name">APP</string>

    <string name="error_hint_net">請等待伺服器連線狀況，稍後再嘗試</string>

    <!-- Login -->
    <string name="login">登入</string>

    <string name="hint_confirm">確認</string>
    <string name="hint_cancel">取消</string>
    <string name="hint_account">請輸入電子信箱</string>
    <string name="hint_password">請輸入密碼</string>
    <string name="error_account">請填寫正確的帳號或密碼</string>
    <string name="items_title">店家列表</string>

    <string name="items_unlock">開通</string>
    <string name="items_change">轉讓</string>

    <string name="login_hint_success">登入成功</string>
    <string name="login_hint_error">驗證錯誤</string>

    <!-- register -->
    <string name="register">註冊</string>
    <string name="register_error_email">信箱已經使用過</string>
    <string name="register_hint_success">註冊成功</string>

    <!-- store -->
    <string name="store_title">店家一</string>

    <!-- lock -->
    <string name="lock_title">開通帳戶</string>
    <string name="lock_hint_account">請輸入序號</string>
    <string name="lock_hint_or">或是開通一組新的LDAP帳戶</string>
    <string name="lock_hint_create">開通</string>
    <string name="lock_error_account_empty">請填寫序號</string>

    <!-- point -->
    <string name="point_title">轉讓點數</string>
    <string name="point_rate">目前比率&#160;&#160;1：</string>
    <string name="point_get">預計獲得點數</string>
    <string name="point_hint">請輸入點數</string>
    <string name="point_hint_first">請填寫您想轉換的點數數值。</string>
    <string name="point_hint_second">請按下確認為您轉換點數。</string>

    <!-- Setting -->
    <string name="setting_title">設定</string>
    <string name="setting_finger_print">登入鎖定</string>
    <string name="setting_error_lock">請先行至手機設定指紋鎖或PIN碼鎖</string>
</resources>
