<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="tw.edu.nutc.imac.blockchainfingerprint.ui.store.point.PointModel" />


        <variable
            name="view"
            type="tw.edu.nutc.imac.blockchainfingerprint.ui.store.point.PointContract.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="61.2dp"
                android:background="@color/colorTransparent">

                <tw.edu.nutc.imac.blockchainfingerprint.util.view.TitleBarView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:shadowSize="6dp" />

                <TextView
                    style="@style/Title_Text_Unit"
                    android:text="@string/point_title"
                    android:textColor="@color/colorWhite" />

            </RelativeLayout>

            <TextView
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@{data.storeName}"
                android:textColor="@color/colorSubTitleGrey"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_rate"
                    android:textColor="@color/colorSubTitleGrey"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{data.rate}"
                    android:textColor="@color/colorSubTitleGrey"
                    android:textSize="20sp" />
            </LinearLayout>

            <tw.edu.nutc.imac.blockchainfingerprint.util.view.CustomEditContainer
                android:id="@+id/container_point"
                android:layout_width="315dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/colorTransparent"
                app:backgroundPaintColor="@color/colorDuckEggBlue"
                app:backgroundPaintSize="1dp"
                app:radiusSize="2dp"
                app:rimPaintColor="@color/colorBrightGray"
                app:secondShadowSize="6dp"
                app:shadowSize="4dp">

                <EditText
                    android:id="@+id/edit_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_margin="6dp"
                    android:background="@color/colorTransparent"
                    android:hint="@string/point_hint"
                    android:inputType="number"
                    android:onTextChanged="@{view::onPointTextChanged}"
                    android:paddingStart="10dp"
                    android:text="@={data.point}"
                    android:textSize="18sp"
                    app:onFocusChangeListener="@{view.focusChangeListener}" />

            </tw.edu.nutc.imac.blockchainfingerprint.util.view.CustomEditContainer>

            <RelativeLayout
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_get"
                    android:textColor="@color/colorSubTitleGrey"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:text="@={data.resultPoint}"
                    android:textColor="@color/colorSubTitleGrey"
                    android:textSize="20sp" />
            </RelativeLayout>

            <tw.edu.nutc.imac.blockchainfingerprint.util.view.CustomDialogButton
                android:id="@+id/button_confirm"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:onClick="@{()->view.onSubmitClicked()}"
                android:text="@string/hint_confirm"
                android:textColor="@color/colorDuckEggBlue"
                android:textSize="18sp"
                app:radiusSize="2dp"
                app:shadowSize="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorSubTitleGrey" />

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/check_privacy"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/layout_oval_blue_stroke_background"
                    android:ems="1"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:paddingStart="8dp"
                    android:text="@string/point_hint_first"
                    android:textColor="@color/colorSubTitleGrey"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/layout_oval_blue_stroke_background"
                    android:ems="1"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:paddingStart="8dp"
                    android:text="@string/point_hint_second"
                    android:textColor="@color/colorSubTitleGrey"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>